--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100vh;
-  background-color: var(--primary-color);
+  background-color: var(--body-color);
 }
 
 h1,
