--- a/src/scss/_input.scss
+++ b/src/scss/_input.scss
@@ -3,10 +3,12 @@
   width: inherit;
   padding: 0.375rem 0.75rem;
   color: var(--font-color);
-  font-size: 0.9rem;
+  font-family: inherit;
+  font-size: 0.85rem;
   border: none;
   border-radius: 5px;
   background-color: var(--input-bg-color);
+  transition: background-color 0.1s ease-out;
 
   &::placeholder {
     color: var(--font-color-secondary);
